--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
     // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
     /* Language and Environment */
     "target": "es6",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    // "lib": ["DOM"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    "lib": ["dom",
+    "es6",
+    "DOM.Iterable",
+    "ScriptHost"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "jsx": "preserve",                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
